Fix  contrast.

--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -106,3 +106,7 @@ html {
 	border: 0;
 	border-bottom: 1px solid var(--mw-line);
 }
+
+.glossary-term-wrapper a {
+	border-bottom-color: var(--ifm-color-emphasis-500);
+}
